--- a/final project.html
+++ b/final project.html
@@ -26,7 +26,7 @@
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
-                <li class="sidebar-nav-item"><a href="/startbootstrap-stylish-portfolio-gh-pages/resume page.html" target="_blank">Resume</a></li>
+                <li class="sidebar-nav-item"><a href="./index.html" target="_blank">Resume</a></li>
             </ul>
         </nav>
         <!-- Header-->
